--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <section id="contact">
   <div class="map-container" style="max-width:1000px;margin:0 auto 40px;">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.9094461863256!2d77.65503797483801!3d12.784389587513992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae6f0033a3192f%3A0x92fbed18a011ac13!2sKadala%20Ruchi%20-%20The%20coastal%20Cravings!5e0!3m2!1sen!2sin!4v1768367029699!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.9094461863256!2d77.65503797483801!3d12.784389587513992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae6f0033a3192f%3A0x92fbed18a011ac13!2sKadala%20Ruchi%20-%20The%20coastal%20Cravings!5e0!3m2!1sen!2sin!4v1768367029699!5m2!1sen!2sin" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
   <div class="section-title">
     <span>VISIT US</span>
@@ -150,3 +150,4 @@
 </body>
 
 </html>
+
